--- a/templates/lab_app/home.html
+++ b/templates/lab_app/home.html
@@ -2,6 +2,26 @@
 {% block content %}
 {% load static %}
 
+<!-- Hero Section -->
+<header class="hero-section">
+    <div class="overlay">
+        <div class="container text-center">
+            <h2>welcome to</h2>
+            <h1>JASHORE UNIVERSITY OF SCIENCE AND TECHNOLOGY</h1>
+            <h3>যশোর বিজ্ঞান ও প্রযুক্তি বিশ্ববিদ্যালয়</h3>
+            <a href="#" class="cta-button">CLICK HERE TO SIGNUP FOR REGULAR ALUMNI MEMBER</a>
+        </div>
+    </div>
+</header>
+
+<div class="container mt-5 mb-5">
+    <div class="row">
+        <div class="col-12 col-md-6 d-flex flex-column flex-md-row align-items-md-center">
+            <img class="img-fluid border border-warning rounded-3 mb-3 mb-md-0" src="{% static 'images/Nazmul Sir1.jpg' %}" alt="" style="max-width: 100%; height: auto; max-height: 400px; object-fit: cover;">
+            <p class="text-justify-custom text-white ms-md-3 mb-0">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, sequi sed. Laborum dignissimos harum laboriosam amet nobis corporis sint velit exercitationem, fugiat, nisi quis? Natus provident labore minima harum iusto asperiores beatae voluptatum totam explicabo quaerat dicta consectetur ducimus autem, cupiditate ea eius sit quam nisi ipsam. Sed eaque est eveniet et, possimus nihil! Nemo eius magni possimus laborum soluta nihil laudantium praesentium, non repellendus blanditiis, accusamus aut vero reprehenderit ut corrupti eaque quia odit exercitationem beatae neque recusandae ducimus rerum repudiandae! Eveniet libero ipsam expedita ipsum quos, quaerat, corporis quam deleniti corrupti molestias ex eaque reprehenderit earum. Quo, quae!
+            </p>
+        </div>
         <div class="col-12 col-md-6 justify-content-end">
             <p class="text-white text-center mb-4">Latest Researches</p>
             <!-- Carousel Container -->
