--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,7 +25,7 @@
                             <li><a class="dropdown-item" href="{% url 'lab_app:category_people_list' category_name='Honors Students' %}">Honors</a></li>
                             <li><a class="dropdown-item" href="{% url 'lab_app:category_people_list' category_name="Master's Students" %}">Master's</a></li>
                             <li><a class="dropdown-item" href="{% url 'lab_app:category_people_list' category_name='PhD Students' %}">PhD</a></li>
-                            <li><a class="dropdown-item" href="{% url 'lab_app:category_people_list' category_name='M Fill Students' %}">M Fill</a></li>
+                            <li><a class="dropdown-item" href="{% url 'lab_app:category_people_list' category_name='M Fill Students' %}">M.Phil</a></li>
                             <li><a class="dropdown-item" href="{% url 'lab_app:category_people_list' category_name='Ex-Student' %}">Ex-Student</a></li>
                         </ul>
                     </li>
