add education and publication show details

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -295,6 +295,11 @@ h2.text-primary {
   color: #555;
 }
 
+.people{
+  margin: 50px;
+  
+}
+
 /* design education with profile design */
 .profile-container {
   max-width: 350px;
