--- a/templates/lab_app/project_detail.html
+++ b/templates/lab_app/project_detail.html
@@ -8,13 +8,13 @@
             <div class="mb-4">
                 <img src="{{ project.project_image.url }}" class="img-fluid" alt="{{ project.project_title }}">
             </div>
-            <h3 class="text-white">{{ project.project_title }}</h3>
-            <p class="text-white">{{ project.project_description }}</p>
+            <h3 class="text-black">{{ project.project_title }}</h3>
+            <p class="text-black text-justify-custom">{{ project.project_description }}</p>
             <div class="mt-4 text-white">
-                <p class="text-white"><strong>Start Date:</strong> {{ project.stat_date }}</p>
-                <p class="text-white"><strong>End Date:</strong> {{ project.end_date }}</p>
-                <p class="text-white"><strong>Department:</strong> {{ project.department }}</p>
-                <p class="text-white"><strong>Funding Authority:</strong> {{ project.funding_authority }}</p>
+                <p class="text-black"><strong>Start Date:</strong> {{ project.stat_date }}</p>
+                <p class="text-black"><strong>End Date:</strong> {{ project.end_date }}</p>
+                <p class="text-black"><strong>Department:</strong> {{ project.department }}</p>
+                <p class="text-black"><strong>Funding Authority:</strong> {{ project.funding_authority }}</p>
             </div>
         </div>
 
