--- a/templates/lab_app/people_list.html
+++ b/templates/lab_app/people_list.html
@@ -17,9 +17,9 @@
                     </div>
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title text-center">{{ profile.name }}</h5>
-                        <p class="card-text"><strong>Position:</strong> {{ profile.position }}</p>
-                        <p class="card-text"><strong>Affiliation:</strong> {{ profile.affiliation }}</p>
-                        <p class="card-text"><strong>Category:</strong> {{ profile.category.category }}</p>
+                        <p class="card-text text-center">{{ profile.position }}</p>
+                        <p class="card-text">{{ profile.affiliation }}</p>
+                        <p class="card-text">{{ profile.category.category }}</p>
                         <a href="{% url 'lab_app:people_profile_detail' profile.id %}" class="btn btn-primary mt-auto">View Profile</a>
                     </div>
                 </div>
