--- a/static/css/style.css
+++ b/static/css/style.css
@@ -699,3 +699,49 @@ h1 {
     }
   }
   /* home page design end */
+
+
+  /* education design start */
+  .timeline {
+    position: relative;
+    padding-left: 40px;
+    border-left: 2px solid #007bff; /* Vertical line color */
+}
+
+.timeline-item {
+    position: relative;
+    margin-bottom: 30px;
+    padding-left: 20px;
+}
+
+.timeline-dot {
+    position: absolute;
+    left: -9px;
+    top: 5px;
+    width: 15px;
+    height: 15px;
+    background-color: #fff;
+    border: 2px solid #007bff;
+    border-radius: 50%;
+}
+
+.timeline-content {
+    padding-left: 20px;
+}
+
+.degree {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.duration {
+    color: #666;
+    margin-bottom: 5px;
+}
+
+.university {
+    color: #007bff;
+    font-weight: 500;
+}
+ /* education design end */
