--- a/templates/lab_app/people_detail.html
+++ b/templates/lab_app/people_detail.html
@@ -8,7 +8,7 @@
         <!-- Profile Section -->
         <div class="col-md-3">
             <div class="profile">
-                <img src="{{ profile.profile_photo.url }}" alt="{{ profile.name }}" class="profile-image mb-3 ms-5" style="width: 150px; height: 200px;">
+                <img src="{{ profile.profile_photo.url }}" alt="{{ profile.name }}" class="profile-image mb-3 ms-5" style="width: 150px; height: 200px; object-fit: cover;">
                 <h3 class="text-black mt-3 ms-5">{{ profile.user.first_name }} {{ profile.user.last_name }}</h3>
                 <p class="ms-5">{{ profile.position }}</p>
                 <div class="profile-login mt-3">
