--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
 <body>
   
   {% include 'navbar.html' %}
-  <div class="container mt-4">
+  <div class="container mt-4 mb-2">
     <div class="row align-items-center">
         <!-- Logo Section -->
         <div class="col-auto">
@@ -109,6 +109,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-TtrEwJl/xQSP5yjb9qLlyZLfFFoF1c25BzZRPzmGzjdmkED67nvR0Ds1/DyH3ZnT" crossorigin="anonymous"></script>
 
   <!-- Custom Scripts -->
+  <script src="{% static 'js/index.js' %}"></script>
+
   <script>
     $(function() {
       $("#datepicker").datepicker({
