--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="{% url 'lab_app:home_page_view' %}">
-                <span style="color: #5e9693;">Research</span><span style="color: #18EF74;">Lab</span>
+                <span style="color: #0b3583;">Research</span><span style="color: #18EF74;">Lab</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
